--- a/src/componant/Feature/Features.css
+++ b/src/componant/Feature/Features.css
@@ -10,6 +10,7 @@
 	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 	grid-gap: 1rem;
 	margin-top: 20px;
+	padding: 10px;
 }
 
 #features .fea-box {
