--- a/src/componant/SliderStyle2.css
+++ b/src/componant/SliderStyle2.css
@@ -4,7 +4,7 @@
 
 /*------------- Hero section styling start --------------*/
 #home2 {
-	background-image: linear-gradient(rgba(128, 75, 75, 0.3), rgba(105, 60, 60, 0.7)), url("../image/threat1.jpg");
+	background-image: linear-gradient(rgba(128, 75, 75, 0.3), rgba(105, 60, 60, 0.7)), url("../image/img5.jpg");
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
@@ -15,6 +15,8 @@
 	align-items: center;
 	text-align: center;
 	padding-top: 40px;
+	color: white;
+	font-size: large;
 }
 
 #home2 div span {
